kubernetes/staging/okr-staging-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-okr-application
  labels:
    app: staging-okr-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-okr-application
  template:
    metadata:
      labels:
        app: staging-okr-application
    spec:
      containers:
        - name: staging-okr-application
          image: registry.puzzle.ch/puzzle/okr:2.0.24-STAGING
          ports:
            - name: http
              containerPort: 8080
