kubernetes/staging/staging-okr-oidc-mock.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-provider-mock
  labels:
    app: oidc-provider-mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oidc-provider-mock
  template:
    metadata:
      labels:
        app: oidc-provider-mock
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: config
      containers:
        - name: oidc-provider-mock
          image: registry.puzzle.ch/puzzle/oidc-provider-mock:d4ae14c1
          volumeMounts:
            - name: config-volume
              mountPath: "/tmp/config"
          ports:
            - name: http
              containerPort: 8080
