kubernetes/staging/staging-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: staging-okr-application
spec:
  selector:
    app: staging-okr-application
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
