kubernetes/staging/svc_staging-okr-oidc-mock.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: staging-okr-oidc-mock
spec:
  selector:
    app: oidc-provider-mock
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
