kubernetes/staging/okr-staging-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: staging-okr-application
  namespace: pitc-okr-staging
  labels:
    argocd.argoproj.io/instance: pitc-okr-staging
    public: true
spec:
  to:
    kind: Service
    name: staging-okr-application
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  host: okr-stag.ocp.cloudscale.puzzle.ch
  port:
    targetPort: http
